# SoftwareEstimationManager

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-skeleton-slice/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-VALIDATION.md  SKELETON.md  deferred-items.md
.planning/phases/02-engine-form/: 02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-UI-SPEC.md  02-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/routers/: estimates.py  health.py
backend/app/schemas/: estimate.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: EstimateForm.tsx  ResultPanel.tsx
