[project]
name = "estimation-manager-backend"
version = "0.1.0"
description = "Backend für die Software-Estimation-Manager-App (Phase 1: Skeleton Slice)."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi[standard]>=0.136,<0.137",
  "uvicorn[standard]>=0.47",
  "pydantic>=2.13,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
